Fix css of absolute/relative photo header on mobile devices
I want the header to be relative on mobile devices since it is so big
and will block the text in the site. However, for web or screens with <500px
resolution it is fine due to the whitespace on the edge of the site

--- a/css/scss/style_4.scss
+++ b/css/scss/style_4.scss
@@ -668,7 +668,11 @@ section {
 
 img.icon {
   position: fixed;
-  // position: absolute;
+  // override if screen is small
+  @media only screen and (max-width: $break2) {
+    font-size: 15px;
+    position: absolute;
+  }
   height: 50px;
   width: 50px;
   top: 0;
